# stupid_library

./: .gitignore  .gitmodules  CMakeLists.txt  CompilerWarnings_8md.html  Documentation_8md.html  External__Lib_8md.html  LinkTimeOptimization_8md.html  LinkingType_8md.html  Makefile  README.md  README_8md.html  Sanitazier_8md.html  UnitTest_8md.html  custom-alternative.css  dir_000004_000000.html  dir_3c165830f13ea8bc275b55ab82a380a4.html  dir_3c165830f13ea8bc275b55ab82a380a4.js  dir_3c165830f13ea8bc275b55ab82a380a4_dep.map  dir_3c165830f13ea8bc275b55ab82a380a4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_92bb37ca6a3a8b64e7cd2b4ae806979b.html  dir_92bb37ca6a3a8b64e7cd2b4ae806979b.js  dir_92bb37ca6a3a8b64e7cd2b4ae806979b_dep.map  dir_92bb37ca6a3a8b64e7cd2b4ae806979b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_ef3b2545113449f8f25e623a543d64e3.html  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  good__doc__class_8hpp.html  good__doc__class_8hpp_source.html  graph_legend.html  include_2CMakeLists_8txt.html  (+36 more)
.github/workflows/: documentation.yaml
cmake/: AddGitSubmodule.cmake  Docs.cmake  LTO.cmake  Warnings.cmake
configured/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile  Doxyfile_local
docs/doxygen-custom/: DoxygenLayout.xml  custom-alternative.css  github-button.css  header.html  header_local.html
docs/pages/: CompilerWarnings.md  Documentation.md  External_Lib.md  LinkTimeOptimization.md  LinkingType.md  Sanitazier.md  UnitTest.md
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/stupid_library/: CMakeLists.txt  good_doc_class.hpp  print.hpp  stupid_library.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  searchdata.js
src/: CMakeLists.txt
src/stupid_library/: CMakeLists.txt  print.cpp  stupid_library.cpp
test/: CMakeLists.txt  main.cpp
